--- a/assets/styles.css
+++ b/assets/styles.css
@@ -19,7 +19,7 @@ body {
     left: 0;
     width: 100vw;
     height: 100vh;
-    background: url(/myproject/integrated/assets/img/background.png);
+    background: url('https://fauzansulthoni.github.io/integrated698/assets/img/background.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
